--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <!-- <p class="f-headline-l f-inform-m f2 fw8 black tc ma0"><b>inform</b></p> -->
     <p class="tc f1-l f2-m f3 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3">Scientific illustration and animation studio</p>
     <!-- <p class="tc mt5-ns mt5 f3-ns f4">We specialize in:</p> -->
-    <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100 ma0">Under construction - check back soon for more details.</p></div>
-    <div class="cf grid-l mw7 center pb4 pt4-ns">
+    <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100 ma0">Under construction - check back soon for more details.</p></div> -->
+    <div class="cf grid-l mw7 center pb3 pt3-ns">
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="journal-covers.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3 "><!-- originally no border shadow-3 -->
