--- a/journal-covers.html
+++ b/journal-covers.html
@@ -6,16 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
+  <style>
+    .permissions {
+      margin-top: -0.3rem;
+    }
+  </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
   <header class="w-100 bb b--moon-gray">
-    <a href="index.html" class="no-underline black-70"><p class="tl f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
+    <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
   <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
   <div class="mw8 w-100 center pl2 pr2">
-    <p class="tc f2-ns f3 pt4 mb3 dark-gray">Want to showcase your research?</p>
+    <p class="tc f1-ns f2 pt4 mb3 dark-gray">Want to showcase your research?</p>
     <h1 class="tc f3-ns f4">We've got you covered.</h1>
-    <p class="f4-ns f5 mw6 center mt5 lh-copy">Not only will a custom cover illustration be great, but a nice illustration can also be used for posters, lab sites, promotional materials, whatever.</p>
+    <p class="f4-ns f5 mw6 center mt5 lh-copy">Not only will a custom cover illustration be great, but a nice illustration can also be used for posters, websites, promotional materials, talks, etc.</p>
     <p class="tc f3-ns f4 mt5">How it works:</p>
     <div class="dt-ns w-100 mt4">
       <div class="w-50-ns dtc-ns v-mid">
@@ -28,7 +33,7 @@
           <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">You send us a copy of the paper and any ideas* you have for illustration.<span class="f7 db" style="line-height: 1.25 !important;"><br><br>*Written description, photos, hastily scribbled napkin sketches</span></p>
         </div>
       </div>
-      <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
+      <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/step1-01.png"></div>
     </div>
     <div class="dt-ns w-100 mt4">
       <div class="w-50-ns dtc-ns v-mid">
@@ -41,7 +46,7 @@
           <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We produce a number of sketches from your description, ideas for where to start. </p>
         </div>
       </div>
-      <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
+      <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/step2.png"></div>
     </div>
     <div class="dt-ns w-100 mt4">
       <div class="w-50-ns dtc-ns v-mid">
@@ -54,7 +59,7 @@
           <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We work with you to refine the illustration, iterating through multiple drafts.</p>
         </div>
       </div>
-      <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
+      <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/step3.png"></div>
     </div>
     <div class="dt-ns w-100 mt4">
       <div class="w-50-ns dtc-ns v-mid">
@@ -64,10 +69,10 @@
               <p class="dib v-mid f2 mt2 pt1">4</p>
             </div>
           </div>
-          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">When you're satisfied, we'll produce a high-resolution render, ready for publication.</p>
+          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">When you're satisfied, we produce a high-resolution render, ready for publication.</p>
         </div>
       </div>
-      <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
+      <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/step4.png"><p class="tc w-50 mr2 fr f7 gray mb0 permissions"><a href="https://www.nature.com/nphoton/volumes/10/issues/9" class="gray">Used with permission.</a></p></div>
     </div>
     <p class="tc mt6-ns mt5 mb0 f2-ns f3 dark-gray">Ready to get started?</p>
     <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Contact us<span><img src="mail.svg" class="w2 ml1"></span></a> for a consultation.</p>
