--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -8,17 +8,20 @@
   <link rel="stylesheet" href="tachyons.min.css">
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
-  <header class="w-100 bb b--moon-gray">
+  <header class="w-100">
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <div class="mw8 w-100 center pl2 pr2">
-    <p class="tc f1-ns f2 pt4 mb3 dark-gray">If a picture is worth a thousand words...</p>
-    <h1 class="tc f3-ns f4">...an animation may save a few more.</h1>
-    <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
-  </div>
-  <div>
-    <div class="bt b--moon-gray mt6-ns mt5 center">
-      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
+  <section class="bg-lightest-blue bt b--moon-gray w-100 mt0 pb5">
+    <div class="mw8 w-100 center pl2 pr2">
+      <p class="tc f1-ns f2 pt4 mb3 dark-gray">If a picture is worth a thousand words...</p>
+      <h1 class="tc f3-ns f4">...an animation may save a few more.</h1>
+      <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
+      <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
     </div>
-  </div>
+  </section>
+  <footer>
+    <div class="bt b--moon-gray center">
+      <p class="tc f7 gray mt2 mb1">© 2018 Inform Studio</p>
+    </div>
+  </footer>
 </body>
