--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -8,16 +8,87 @@
   <link rel="stylesheet" href="tachyons.min.css">
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
-  <header class="w-100 bb b--moon-gray">
+  <header class="w-100">
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <div class="mw8 w-100 center pl2 pr2">
-    <p class="tc f1-ns f2 pt4 mb3 dark-gray">Scientific Illustration</p>
-    <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
-  </div>
-  <div>
-    <div class="bt b--moon-gray mt6-ns mt5 center">
-      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5">
+    <div class="mw8 w-100 center pl2 pr2">
+      <p class="tc f1-ns f2 pt4 mb3 dark-gray">The invisible made visible.</p>
+      <h1 class="tc f3-ns f4">Bringing an unseen world to life.</h1>
+      <p class="f4-ns f5 mw6 center mt5 lh-copy">Sometimes you just need a drawing. Good scientific illustration can bridge time and space, superimposing times, scales, concepts, and events.
+      <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
     </div>
-  </div>
+  </section>
+  <section class="w-100 pl2 pr2 bt b--moon-gray bw1" style="background-color: rgb(12, 25, 32)">
+    <div class="mw8 w-100 center">
+      <!-- <p class="tc f3-ns f4 mt5">How it works:</p> -->
+      <div class="dt-ns w-100">
+        <div class="w-40-ns dtc-ns v-mid">
+          <div class="tl">
+            <p class="w-100 fr-ns tc-l tc f3-l f4-m f4 lh-copy light-gray db-ns dn">Accurate depictions...</p>
+          </div>
+        </div>
+        <div class="w-60-ns w-100 dtc-ns v-mid"><img src="images/illustration/quantum_dot.jpg"></div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5">
+    <div class="mw8 w-100 center pl2 pr2">
+      <p class="f4-ns f5 mw6 center mt5 lh-copy">We combine data, photographs, and careful research to faithfully represent the essence of a concept. We'll work with you to accurately translate the science into a compelling illustration.</p>
+      <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
+    </div>
+  </section>
+  <section class="w-100 pl2 pr2 bt b--moon-gray bw1" style="background-color: rgb(1, 5, 8)">
+    <div class="mw8 w-100 center">
+      <div class="dt-ns w-100">
+        <div class="w-60-ns w-100 dtc-ns v-mid"><img src="images/illustration/emsquid.jpg"></div>
+        <div class="w-40-ns dtc-ns v-mid">
+          <div class="tl">
+            <p class="w-100 fr-ns tc-l tc f3-l f4-m f4 lh-copy light-gray db-ns dn">...of complex phenomena.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5 relative">
+    <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 relative z-1">
+      <p class="f4-ns f5 mw6 center mt5 lh-copy">Accuracy isn't sufficient—an illustration should be attractive as well! A colorful, compelling artwork inspires the imagination and leaves the viewer curious for more.</p>
+      <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Recent work</p>
+      <div class="w-100 dt-ns">
+        <div class="w-third-ns pa3-l pa2 dtc-ns">
+          <div class="pa1 pb0 bg-white shadow-3">
+            <img src="images/illustration/cover.jpg">
+          </div>
+          <p class="f6 tc b mb1">Quantum phase switch</p>
+          <p class="f7 tc mt0">Client: University of Maryland</p>
+        </div>
+        <div class="w-third-ns pa3-l pa2 dtc-ns">
+          <div class="pa1 pb0 bg-white shadow-3">
+            <img src="images/illustration/nanowire.jpg">
+          </div>
+          <p class="f6 tc b mb1">Gallium-nitride nanowire LED</p>
+          <p class="f7 tc mt0">Client: National Institute of Standards and Technology</p>
+        </div>
+        <div class="w-third-ns pa3-l pa2 dtc-ns">
+          <div class="pa1 pb0 bg-white shadow-3">
+            <img src="images/illustration/cover2.jpg">
+          </div>
+          <p class="f6 tc b mb1">Optics for single-atom imaging</p>
+          <p class="f7 tc mt0">Client: Joint Quantum Institute</p>
+        </div>
+      </div>
+    </div>
+    <div class=" absolute h-50 bg-light-gray w-100 center bottom-0 bt b--moon-gray bw1"></div>
+  </section>
+  <section class="w-100 bg-light-gray bt b--light-gray pb6-ns pb5">
+    <div class="mw8 w-100 center">
+      <p class="tc mb0 f2-ns f3 dark-gray">Want to collaborate?</p>
+      <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Drop us a line<span><img src="mail.svg" class="w2 ml1"></span></a> and let's discuss your project.</p>
+    </div>
+  </section>
+  <footer>
+    <div class="bt b--moon-gray center">
+      <p class="tc f7 gray mt2 mb1">© 2018 Inform Studio</p>
+    </div>
+  </footer>
 </body>
