--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pa2 relative">
-  <div class="mw9-l mw8-m center pl4-l pr4-l mt4-l mt3-m mt2">
+  <div class="mw9-l mw8-m center pl4-l pr4-l mt4-l mt3-m mt0">
     <!-- originally mt5-ns -->
     <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5">
       <img src="images/logo-01.png" class="w-100 dn db-ns">
@@ -74,7 +74,7 @@
     <!-- <p class="f3-ns f4 mw7 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
     <!-- <p class="tc mt5-ns mt5 f3-ns f4">We specialize in:</p> -->
     <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100 ma0">Under construction - check back soon for more details.</p></div> -->
-    <div class="cf grid-l mw8 center pb3 pt5-ns pt4">
+    <div class="cf grid-l mw8 center pb3 pt5-ns pt3">
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3 dn db-ns">
         <a href="journal-covers.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3">
@@ -85,7 +85,7 @@
       </div>
       <div class="w-100 center dn-ns mb3">
         <a href="journal-covers.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray pointer dt">
+          <div class="relative ba b--moon-gray pointer dt">
             <img src="images/cover-thumb.jpg" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f4 tc">Journal Covers</p></div>
           </div>
@@ -100,8 +100,8 @@
         </a>
       </div>
       <div class="w-100 center dn-ns mb3">
-        <a href="journal-covers.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray pointer dt">
+        <a href="technical-graphics.html" class="dark-gray no-underline">
+          <div class="relative ba b--moon-gray pointer dt">
             <img src="images/prospect-diagram.jpg" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f4 tc">Technical Graphics</p></div>
           </div>
@@ -116,8 +116,8 @@
         </a>
       </div>
       <div class="w-100 center dn-ns mb3">
-        <a href="journal-covers.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray pointer dt">
+        <a href="scientific-illustration.html" class="dark-gray no-underline">
+          <div class="relative ba b--moon-gray pointer dt">
             <img src="images/parafermions.jpg" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f4 tc">Scientific Illustration</p></div>
           </div>
@@ -132,8 +132,8 @@
         </a>
       </div>
       <div class="w-100 center dn-ns mb3">
-        <a href="journal-covers.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray pointer dt">
+        <a href="explanatory-animation.html" class="dark-gray no-underline">
+          <div class="relative ba b--moon-gray pointer dt">
             <img src="images/moebius.gif" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f4 tc">Explanatory Animation</p></div>
           </div>
@@ -148,8 +148,8 @@
         </a>
       </div>
       <div class="w-100 center dn-ns mb3">
-        <a href="journal-covers.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray pointer dt">
+        <a href="data-visualization.html" class="dark-gray no-underline">
+          <div class="relative ba b--moon-gray pointer dt">
             <img src="images/dots.jpg" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f4 tc">Data Visualization</p></div>
           </div>
@@ -164,8 +164,8 @@
         </a>
       </div>
       <div class="w-100 center dn-ns mb3">
-        <a href="journal-covers.html" class="dark-gray no-underline">
-          <div class="relative ba b--gray pointer dt">
+        <a href="interaction-development.html" class="dark-gray no-underline">
+          <div class="relative ba b--moon-gray pointer dt">
             <img src="images/test.gif" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f4 tc">Interaction Development</p></div>
           </div>
