--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -22,11 +22,11 @@
   <header class="w-100">
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <section class="bg-white bt b--moon-gray w-100 mt0 pb5">
+  <section class="bt b--moon-gray w-100 mt0 pb5-ns pb4">
     <div class="mw8 w-100 center pl2 pr2">
-      <p class="tc f1-ns f2 pt4 mb3 dark-gray">The invisible made visible.</p>
-      <h1 class="tc f3-ns f4">Bringing an unseen world to life.</h1>
-      <p class="f4-ns f5 mw6 center mt5 lh-copy">Sometimes you just need a drawing. Good scientific illustration can bridge time and space, superimposing times, scales, concepts, and events.
+      <p class="tc-ns f1-ns f2 pt4-ns pt2 mb3 dark-gray">The invisible made visible.</p>
+      <h1 class="tc-ns f3-ns f4">Bringing an unseen world to life.</h1>
+      <p class="f4-ns f5 mw6 center mt5-ns mt4 lh-copy">Sometimes you just need a drawing. Good scientific illustration can bridge time and space, superimposing times, scales, concepts, and events.
       <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
     </div>
   </section>
@@ -43,9 +43,9 @@
       </div>
     </div>
   </section>
-  <section class="bg-white bt b--moon-gray w-100 mt0 pb5">
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4">
     <div class="mw8 w-100 center pl2 pr2">
-      <p class="f4-ns f5 mw6 center mt5 lh-copy">We combine data, photographs, and careful research to faithfully represent the essence of a concept. We'll work with you to accurately translate the science into a compelling illustration.</p>
+      <p class="f4-ns f5 mw6 center mt5-ns mt4 lh-copy">We combine data, photographs, and careful research to faithfully represent the essence of a concept. We'll work with you to accurately translate the science into a compelling illustration.</p>
       <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
     </div>
   </section>
@@ -61,10 +61,10 @@
       </div>
     </div>
   </section>
-  <section class="bg-white bt b--moon-gray w-100 mt0 pb5 relative">
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4 relative">
     <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 relative z-1">
-      <p class="f4-ns f5 mw6 center mt5 lh-copy">However, accuracy isn't sufficient—an illustration should be attractive as well! Captivating artwork inspires the imagination and leaves the viewer curious to learn more.</p>
-      <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Recent work:</p>
+      <p class="f4-ns f5 mw6 center mt5-ns mt4 lh-copy">However, accuracy isn't sufficient—an illustration should be attractive as well! Captivating artwork inspires the imagination and leaves the viewer curious to learn more.</p>
+      <p class="f2-ns f3 mw6 center tc mt5-ns mt4 lh-copy mb3">Recent work:</p>
       <div class="w-100 dt-ns">
         <div class="w-third-ns pa3-l pa2 dtc-ns">
           <div class="pa1 pb0 bg-white shadow-3">
