--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -18,9 +18,9 @@
     }
   </style>
 </head>
-<body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
+<body class="sans-serif w-100 center black-70 f6 bg-white">
   <header class="w-100">
-    <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
+    <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb0 mw8 center pa2"><b class="fw8">inform</b>studio</p></a>
   </header>
   <section class="bt b--moon-gray w-100 mt0 pb5-ns pb4">
     <div class="mw8 w-100 center pl2 pr2">
@@ -99,7 +99,7 @@
   </section>
   <footer>
     <div class="bt b--moon-gray center">
-      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb2">© 2018 Inform Studio</p>
     </div>
   </footer>
 </body>
