--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -28,16 +28,12 @@
     <div class="mw8 w-100 center pl2 pr2">
       <p class="tc-ns f1-ns f2 pt4-ns pt2 mb3 dark-gray">If a picture is worth a thousand words<span class="f3">...</span></p>
       <h1 class="tc-ns f3-ns f4"><span class="f5">...</span>an animation may save a few more.</h1>
-      <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
-      <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
       <div class="w-100 mw7 center tc mt5-ns mt4 ba b--moon-gray">
         <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/271547528?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       </div>
-
-      <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
     </div>
   </section>
-  <section class="bt b--moon-gray w-100 mt0 pb5-ns pb4 relative bg-lightest-gray">
+  <section class="bt-ns b--moon-gray w-100 mt0 pb5-ns pb4 relative bg-lightest-gray">
     <div class="mw8 w-100 center pa2 pr4-l pl4-l">
       <p class="f2-ns f3 mw6 center tc-ns mt5-ns mt4 lh-copy mb3">Sometimes words fall short.</p>
       <p class="f4-ns f5 mw6 center mt4 lh-copy">Even with an eloquent vocabulary, it can be difficult to describe how something looks—especially when dealing with a complex process or unfamiliar phenomenon.</p>
@@ -51,7 +47,7 @@
       </div>
       <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
   </section>
-  <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4 relative">
+  <section class="bg-white bt-ns b--moon-gray w-100 mt0 pb5-ns pb4 relative">
     <div class="mw8 w-100 center pr4-l pl4-l pa2">
     <p class="f2-ns f3 mw7 center tc-ns mt5-ns mt4 lh-copy mb3">A suitable animation for every situation.</p>
     <p class="f4-ns f5 mw6 center mt4 lh-copy">We'll tailor the visual complexity and scope of the animation to your needs, creating engaging visuals appropriate for your audience.</p>
